.data/projects/darklua-0.17.2/src/rules/rename_variables/snapshots/darklua_core__rules__rename_variables__test__rename_variables_with_function_names.snap
---
source: src/rules/rename_variables/mod.rs
expression: rule as Box<dyn Rule>

---
{
  "rule": "rename_variables",
  "include_functions": true
}
